manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps

# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: game-2048
