manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: 806263047535.dkr.ecr.ap-southeast-1.amazonaws.com/afsb-dtp-staging-repo:latest
          ports:
            - containerPort: 80

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-error
  labels:
    app: app-error
  namespace: error
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-error
  template:
    metadata:
      labels:
        app: app-error
    spec:
      containers:
        - name: app-error
          image: 806263047535.dkr.ecr.ap-southeast-1.amazonaws.com/afsb-dtp-staging-repo:latest
          ports:
            - containerPort: 80
