manifest/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
#   namespace: apps
# spec:
#   ingressClassName: nginx
#   defaultBackend:
#     service:
#       name: nginx-ingress-error-svc
#       port:
#         number: 80
#   rules:
#     - host: test.focuslearningorg.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: nginx-ingress-svc
#                 port:
#                   number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: listener-http-80
  namespace: kube-system
  annotations:
    ## This Ingress must define at least 1 rule so it is explicit rule the
    ## same as default in `aws_lb.ingress.default_action`
    alb.ingress.kubernetes.io/actions.default: |
      {
        "type": "fixed-response",
        "fixedResponseConfig": {
          "contentType": "text/plain",
          "statusCode": "404",
          "messageBody": ""
        }
      }
    ## Name of the ALB
    alb.ingress.kubernetes.io/group.name: dtp-eks-cluster-ingress
    ## The lowest possible priority
    alb.ingress.kubernetes.io/group.order: "100"
    ## Name of the ALB
    alb.ingress.kubernetes.io/load-balancer-name: dtp-eks-cluster-ingress
    ## Must be the same as in `aws_lb.ingress.internal`
    alb.ingress.kubernetes.io/scheme: internet-facing
    ## Uses AWS Load Balancer Controller
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: test.focuslearningorg.com
      http:
          paths:
            - pathType: Prefix
              path: /
              backend:
                service:
                  ## The same ID as in `alb.ingress.kubernetes.io/actions.ID`
                  name: app-svc
                  port:
                    ## Must be literally `use-annotation`
                    name: use-annotation
                    number: 80
